--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@supabase/supabase-js": "^2.49.8",
     "argon2": "^0.43.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.1.0",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4"
   },
