--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Tambahan ignore untuk file sensitif dan config lokal
+android/app/google-services.json
