--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   flutter_dotenv: ^5.2.1
   http: ^1.4.0
   shared_preferences: ^2.5.3
+  flutter_local_notifications: ^19.2.1
+  timezone: ^0.10.1
+  permission_handler: ^12.0.0+1
+  firebase_core: ^2.30.0
+  firebase_messaging: ^14.7.10
 
 dev_dependencies:
   flutter_test:
